fixed overlapping text in skills section on mobile

--- a/sass/_media.scss
+++ b/sass/_media.scss
@@ -186,6 +186,15 @@
 		padding: 0;
 		font-size: 13px;
 	}
+	.skills {
+		.content {
+			ul {
+				li {
+					width: 25%;
+				}
+			}
+		}
+	}
 
 }
 
